# hackathon-mipt

./: .dockerignore  .gitignore  README.md  authorized_key.json  conftest.py  manage.py  package-lock.json  package.json  packages.sh  pyproject.toml  requirements.txt  vite.config.ts
docker/: README.md  docker-stack.yml  down.sh  gunicorn-entrypoint.sh  gunicorn.Dockerfile  gunicorn.conf.py  logs.sh  nginx.conf  server_settings.py  up.sh
front/css/: main.scss
front/js/: .eslintrc.js  globals.d.ts  main.tsx  react.tsx  tsconfig.json
front/js/components/parts/: FP.tsx  FeaturedPost.tsx  MainFeaturedPost.tsx
front/js/pages/: common.ts
front/js/utils/: on_dom_loaded.ts
front/vite/: vite_manifest_plugin.js
gn/: asgi.py  settings.py  urls.py  wsgi.py
gn/templates/: base.html
gn/templates/registration/: login.html
gn/utils/: context_processors.py
main/: apps.py  comparing_docs.py  urls.py
main/admin/: user.py
main/api/: __init__.py  base_viewsets.py  comparison.py  doc.py  files.py  user.py
main/migrations/: 0001_initial.py  0002_doc.py  0003_file_doc_file.py  0004_doc_is_requirements_alter_doc_unique_together_and_more.py
main/models/: __init__.py  comparison.py  doc.py  file.py  user.py
main/models/utils/: file_field.py  file_system_storage.py
main/serializers/: __init__.py  base.py  comparison.py  doc.py  file.py  user.py
main/serializers/validation/: __init__.py  file_extension_validator.py
main/templates/main/: home.html
main/templatetags/: main.py
main/views/: home.py
myenv/: pyvenv.cfg
utils/: validation.py
(+3 files in other folders)
